--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 RVS_DB_PASS=rvs_user
-RVS_DB_HOST=db
+RVS_DB_HOST=db_test
 RVS_DB_USER=rvs_user
 RVS_DB_PORT=5432
 RVS_DB_NAME=rvs_incrementer_db
-APP_PORT=8000
-APP_IP=0.0.0.0
+RVS_APP_PORT=8000
+RVS_APP_IP=0.0.0.0
